--- a/css/about.css
+++ b/css/about.css
@@ -376,7 +376,11 @@ tr td:nth-child(2){
     top: 0;
     left: 0;
     z-index: 25;
-    padding:15% 5% 5%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+
 }
 .photobox .centerphoto{
     margin: auto;
@@ -384,10 +388,8 @@ tr td:nth-child(2){
     width: 50%;
     max-width: 750px;
     min-height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     aspect-ratio: 5/3;
+    text-align: center;
 }
 .photobox .centerphoto img{
     height: 100%;
@@ -697,14 +699,14 @@ tr td:nth-child(2){
     }
     .photobox{
         width: 100%;
-        padding:35% 5% 5%;
+        padding:0 5%;
     }
     .photobox .centerphoto{
         width: 100%;
         height: auto;
     }
     .photobox i{
-        top: 12%;
+        top: 5%;
     }
     .photobox .centerphoto img{
         width: 100%;
